--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native": "^5.1.2",
     "@react-navigation/stack": "^5.2.5",
     "axios": "^0.19.2",
+    "date-fns": "^2.0.0-beta.5",
+    "date-fns-tz": "^1.0.10",
     "immer": "^6.0.2",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
